--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon May 20 14:05:11 AEST 2019
-sdk.dir=/Users/ryandawson/Library/Android/sdk
+#Tue May 21 17:12:05 AEST 2019
+sdk.dir=C\:\\Users\\dawso.DESKTOP-SK6U4T8\\AppData\\Local\\Android\\Sdk
